fixed v align issue in textbox.

--- a/src/textbox.less
+++ b/src/textbox.less
@@ -26,6 +26,7 @@
 
     > input {
         height: @esf-textbox-height;
+        vertical-align: top;
     }
     > input,
     > textarea {
